--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.PedidoActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewTestoTela"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,14 +19,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewPreco"
         android:textSize="40sp"
         android:textColor="@color/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/textViewTestoTela"
+        app:layout_constraintStart_toStartOf="@+id/textViewTestoTela"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTestoTela" />
 </android.support.constraint.ConstraintLayout>
